pagina de logado

--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -30,7 +30,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -40,7 +40,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                        <a href="#" class="btn btn-primary ">Ver mais</a>
                     </div>
 
                 </div>
@@ -50,7 +50,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -62,7 +62,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
 
                         </div>
 
@@ -74,7 +74,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -85,7 +85,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -98,7 +98,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -109,7 +109,7 @@
                                 <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -121,7 +121,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -139,7 +139,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -149,7 +149,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                        <a href="#" class="btn btn-primary ">Ver mais</a>
                     </div>
 
                 </div>
@@ -159,7 +159,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">RVer mais</a>
                     </div>
 
                 </div>
@@ -171,7 +171,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
 
                         </div>
 
@@ -183,7 +183,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -194,7 +194,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -207,7 +207,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -218,7 +218,7 @@
                                 <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -230,7 +230,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -248,7 +248,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -258,7 +258,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                        <a href="#" class="btn btn-primary ">Ver mais</a>
                     </div>
 
                 </div>
@@ -268,7 +268,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -280,7 +280,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
 
                         </div>
 
@@ -292,7 +292,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -303,7 +303,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -316,7 +316,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -327,7 +327,7 @@
                                 <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -339,7 +339,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -356,7 +356,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -366,7 +366,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                        <a href="#" class="btn btn-primary ">Ver mais</a>
                     </div>
 
                 </div>
@@ -376,7 +376,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
 
                 </div>
@@ -388,7 +388,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
 
                         </div>
 
@@ -400,7 +400,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -411,7 +411,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Ver mais</a>
                         </div>
 
                     </div>
@@ -424,7 +424,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -435,7 +435,7 @@
                                 <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
@@ -447,7 +447,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Ver mais</a>
                             </div>
 
                         </div>
