--- a/src/app/tela-usuario/tela-usuario.component.html
+++ b/src/app/tela-usuario/tela-usuario.component.html
@@ -7,7 +7,7 @@
             <div class="margem-card card ml-5">
                 <div class="card-body">
                     <div class="col mx-auto text-center">
-                        <img src="https://i.imgur.com/NwSnfBn.png" class='img-fluid' width="500" height="500" alt="gif de uma arvore">
+                        <img src="https://i.imgur.com/NkrbUT5.png" class='img-fluid' width="500" height="500" alt="gif de uma arvore">
                         <h2 class="cor card-title">Histórico da compra</h2>
                     </div>
 
