--- a/src/app/minhas-compras/minhas-compras.component.html
+++ b/src/app/minhas-compras/minhas-compras.component.html
@@ -16,7 +16,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Falar com vendedor</a>
                     </div>
 
                 </div>
@@ -26,7 +26,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                        <a href="#" class="btn btn-primary ">Falar com vendedor</a>
                     </div>
 
                 </div>
@@ -36,7 +36,7 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
+                        <a href="#" class="btn btn-primary">Falar com vendedor</a>
                     </div>
 
                 </div>
@@ -48,7 +48,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Falar com vendedor</a>
 
                         </div>
 
@@ -60,7 +60,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Falar com vendedor</a>
                         </div>
 
                     </div>
@@ -71,7 +71,7 @@
                             <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                                 introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
                             </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
+                            <a href="#" class="btn btn-primary">Falar com vendedor</a>
                         </div>
 
                     </div>
@@ -84,7 +84,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Falar com vendedor</a>
                             </div>
 
                         </div>
@@ -95,7 +95,7 @@
                                 <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Falar com vendedor</a>
                             </div>
 
                         </div>
@@ -107,7 +107,7 @@
                                     uma
                                     introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
                                     demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
+                                <a href="#" class="btn btn-primary">Falar com vendedor</a>
                             </div>
 
                         </div>
