--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -155,23 +155,23 @@
 
                                 <!--Campo preenchimento usuário já cadastrado-->
                                 <div class="label-float">
-                                    <input type="text" id="email" placeholder="">
+                                    <input [(ngModel)]='usuarioLogin.emailUsuario' type="text" id="email" placeholder="">
                                     <label for="email">E-mail</label>
                                 </div>
 
                                 <div class="label-float">
-                                    <input type="text" id="senha" placeholder="">
+                                    <input [(ngModel)]='usuarioLogin.senhaUsuario' type="text" id="senha" placeholder="">
                                     <label for="senha">Senha</label>
                                 </div>
                                 <!--Campo preenchimento usuário já cadastrado-->
 
                                 <!--Campo esqueceu senha -->
-                                <a class="textEsqueceu" href="">Esqueceu sua senha?</a>
+                                <a class="textEsqueceu" href="" >Esqueceu sua senha?</a>
                                 <!--/Campo esqueceu senha -->
 
                                 <!--Botão de Entrar-->
                                 <div class="justify-center">
-                                    <button class="bt-entrar">Seja bem-vinde</button>
+                                    <button (click)='entrar()' class="bt-entrar">Seja bem-vinde</button>
                                 </div>
                                 <!--/Botão de Entrar-->
                                 <div class="justify-center">
@@ -182,7 +182,7 @@
 
                                 <!--Botão de Cadastrar-->
                                 <div class="justify-center">
-                                    <button class="bt-entrar">Venha para nossa Ecovila</button>
+                                    <button routerLink='/cadastrar' class="bt-entrar" >Venha para nossa Ecovila</button>
                                 </div>
                                 <!--Botão de Cadastrar-->
 
