Atualiaçao  alterarcadastro-alterarproduto-cadastrar-card-criarproduto

--- a/src/app/alterarcadastro/alterarcadastro.component.html
+++ b/src/app/alterarcadastro/alterarcadastro.component.html
@@ -35,7 +35,7 @@
                         </div>
             
                         <div class="label-float d-flex justify-content-center">
-                            <input type="text" id="dataDeNascimento" placeholder="" required>
+                            <input type="date" id="dataDeNascimento" placeholder="" required>
                             <label for="dataDenNscimento">Data de nascimento*</label>
                             
             
