--- a/src/app/alterarproduto/alterarproduto.component.css
+++ b/src/app/alterarproduto/alterarproduto.component.css
@@ -178,7 +178,7 @@ ul.social-networks li{
   }
   
   button:hover{
-  background-color: #84A59D;
+  background-color: #F28482;
   color: #fff;
   }
   
