--- a/src/app/alterarproduto/alterarproduto.component.html
+++ b/src/app/alterarproduto/alterarproduto.component.html
@@ -1,8 +1,8 @@
 <!-- Card 1-->
 <body>
     
-    <div class="row container-fluid pt-4">
-        <div class="col-sm-6 dista">
+    <div class="row container-fluid pt-4 ">
+        <div class="col-sm-6 px-0">
           <div class="card">
             <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
                 <h1> Altere o seu produto! </h1>
@@ -65,14 +65,14 @@
 
         <!-- Card 2-->
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 px-0">
           <div class="card">
             <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
                 <h1> Descriçao do produto </h1>
                 <p>Escreva uma descriçao bem legal sobre o seu produto(ate 500 caracteres)</p>
                 <textarea name="text" id="Descriçao" cols="105" rows="10"></textarea>
             </div>
-            <div class="label-float d-flex justify-content-end pt-3">
+            <div class="label-float d-flex justify-content-end pt-3 ">
              <button type="button" class="btn btn-primary" data-toggle="modal"                 data-target="#ExemploModalCentralizado">
                 Ver mais     
              </button>                 
