--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input [(ngModel)]='usuarioLogin.dataAniversario' type="text" id="dataDeNascimento" placeholder="" required>
+                <input [(ngModel)]='usuarioLogin.dataAniversario' type="date" id="dataDeNascimento" placeholder="" required>
                 <label for="dataDenNscimento">Data de nascimento*</label>
 
             </div>
