--- a/src/app/criarproduto/criarproduto.component.css
+++ b/src/app/criarproduto/criarproduto.component.css
@@ -84,7 +84,7 @@ ul.social-networks li{
   
     /* formulario de cadastro*/
     
-  /*@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');*/
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
   
   .container {
     display: flex;
@@ -150,39 +150,39 @@ ul.social-networks li{
   }
   
   .label-float label{ /*estilo movimentaçao das letras  */
-  color: #84A59D;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 13px;
-  transition: all .3s ease-out;
-  }
+    color: #84A59D;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 13px;
+    transition: all .3s ease-out;
+    }
   
-  .label-float input:focus + label,
-  .label-float input:valid + label{
-  font-size: 16px;
-  margin-top: 0;
-  color: #84A59D
-  }
+    .label-float input:focus + label,
+    .label-float input:valid + label{
+    font-size: 16px;
+    margin-top: 0;
+    color: #84A59D
+    }
   
-  button{
-  background-color: #F28482;
-  border-color: #F28482;
-  color: #FFFFFF;
-  height: 42px;
-  width: 230px;
-  left: 752px;
-  top: 886px;
-  border-radius: 0px;
-        
+    button{
+      background-color: #F28482;
+      border-color: #F28482;
+      color: #FFFFFF;
+      height: 42px;
+      width: 230px;
+      left: 752px;
+      top: 886px;
+      border-radius: 0px;
+            
   
   }
   
   button:hover{
-  background-color: #84A59D;
-  color: #fff;
-  }
-  
+    background-color: #F28482;
+    color: #fff;
+    }
+    
   
   
   /* tudo dentro do card*/
@@ -212,7 +212,7 @@ ul.social-networks li{
     }
     
     .cor-3{
-        color: #84A59D;
+        color: #F28482;
     }
     
     .esp-1{
@@ -221,8 +221,13 @@ ul.social-networks li{
       color: #84A59D;
      margin-block-end: 10;
     }
+  
+    .colespaçamento{
+    position: relative;
+    min-height: 15px;
+    padding-right: 0px;
+    padding-left: 0px;
+    }
     
-  
-  
-  
+    
   
