--- a/src/app/criarproduto/criarproduto.component.html
+++ b/src/app/criarproduto/criarproduto.component.html
@@ -1,99 +1,95 @@
 <!-- Card 1-->
+
 <body>
-    
+
     <div class="row container-fluid pt-4">
-        <div class="col-sm-6 dista">
-          <div class="card ">
-            <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
-                <h1> Cadastre um novo produto! </h1>
+        <div class="col-sm-6  px-0">
+            <div class="card">
+                <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
+                    <h1> Cadastre um novo produto! </h1>
 
-                <div class='label-float d-flex justify-content-center'>
-                    <input type="text" id="NomeDoProduto" placeholder="" required>
-                    <label for="NomeDoProduto">Nome do produto*</label>
-    
-                </div>
-    
-                <div class="label-float d-flex justify-content-center">
-                    <input type="number" id="Preço" placeholder="" required>
-                    <label for="Preço">Preço*</label>
-    
-                </div>
-    
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="EscolhaUmaCategoria" placeholder="" required>
-                    <label for="EscolhaUmaCategoria">Escolha uma categoria*</label>
-                    
-    
-                </div>
+                    <div class='label-float d-flex justify-content-center'>
+                        <input type="text" id="NomeDoProduto" placeholder="" required>
+                        <label for="NomeDoProduto">Nome do produto*</label>
 
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="LinkDoVideo" placeholder="" required>
-                    <label for="LinkDoVideo">Link do video*</label>
-                    
-    
-                </div>  
+                    </div>
 
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="LinkDeFoto" placeholder="" required>
-                    <label for="LinkDeFoto">Link de foto*</label>
-                    
-    
-                </div>
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="number" id="Preço" placeholder="" required>
+                        <label for="Preço">Preço*</label>
 
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="LinkDeFoto2" placeholder="" required>
-                    <label for="LinkDeFoto2">Link de foto2*</label>
-                    
-    
-                </div>
+                    </div>
 
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="LinkDeFoto3" placeholder="" required>
-                    <label for="LinkDeFoto3">Link de foto3*</label>
-                    
-    
-                </div>
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="EscolhaUmaCategoria" placeholder="" required>
+                        <label for="EscolhaUmaCategoria">Escolha uma categoria*</label>
 
-                <div class="label-float d-flex justify-content-center">
-                    <input type="text" id="LinkDeFoto4" placeholder="" required>
-                    <label for="LinkDeFoto4">Link de foto4*</label>
-                    
-    
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="LinkDoVideo" placeholder="" required>
+                        <label for="LinkDoVideo">Link do video*</label>
+
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="LinkDeFoto" placeholder="" required>
+                        <label for="LinkDeFoto">Link de foto*</label>
+
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="LinkDeFoto2" placeholder="" required>
+                        <label for="LinkDeFoto2">Link de foto2*</label>
+
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="LinkDeFoto3" placeholder="" required>
+                        <label for="LinkDeFoto3">Link de foto3*</label>
+
+
+                    </div>
+
+                    <div class="label-float d-flex justify-content-center">
+                        <input type="text" id="LinkDeFoto4" placeholder="" required>
+                        <label for="LinkDeFoto4">Link de foto4*</label>
+
+
+                    </div>
                 </div>
             </div>
-          </div>
         </div>
         <!-- /Card 1-->
 
         <!-- Card 2-->
+       
+        <div class="col-sm-6 px-0">
+            <div class="card ">
+                <div class="card-body container-fluid pt-5" style="background-color: #FFFFFF">
+                    <h1> Descriçao do produto </h1>
+                    <p>Escreva uma descriçao bem legal sobre o seu produto(ate 500 caracteres)</p>
+                    <textarea name="text" id="Descriçao" cols="105" rows="10"></textarea>
+                </div>
+                <div class="label-float d-flex justify-content-end pt-3 px-5">
+                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                        data-target="#ExemploModalCentralizado">
+                        Enviar
+                    </button>
+                </div>
 
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
-                <h1> Descriçao do produto </h1>
-                <p>Escreva uma descriçao bem legal sobre o seu produto(ate 500 caracteres)</p>
-                <textarea name="text" id="Descriçao" cols="105" rows="10"></textarea>
             </div>
-            <div class="label-float d-flex justify-content-end pt-3">
-             <button type="button" class="btn btn-primary" data-toggle="modal"                 data-target="#ExemploModalCentralizado">
-                Ver mais     
-             </button>                 
+            <div class="col mx-auto text-center ">
+                <img src="https://i.imgur.com/6AV55wo.png" class="img-fluid" width="416" height="416 "
+                    alt="imagem principal">
             </div>
-            
-          </div> 
-          <div class="col mx-auto text-center">
-          <img src="https://i.imgur.com/6AV55wo.png" class="img-fluid" width="416" height="416 " alt="imagem principal">
-          </div>
         </div>
-     
-       <!-- /Card 2--> 
-       <!-- [/img] -->
+    
+        <!-- /Card 2-->
+        
     </div>
 </body>
-
-
- 
- 
-<!--https://i.imgur.com/6AV55wo.png-->
-
-
