--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -117,10 +117,9 @@ body {
 .card {
   background-color: white; /*posiçao o card e formato do card*/
   padding: 60px;
-  border-radius: 4%;
-  box-shadow: 3px 3px 1px 0px #84A59D; /*se nao ficar legal com essa cor teste #00000060*/
+  border-radius: 4%;  
   width: 694px; /*largura*/
-  Height: 790px;
+  Height: 800px;
   left: 374px; /*movimento*/
   top: 100px; /*distacia do topo*/ 
   
@@ -131,11 +130,10 @@ body {
 h1{
   text-align: center;
   margin-bottom: 20px;
-  color: #84A59D;
+  color: #84A59D;  
   ;   
-}
-
-.label-float input{ /*Cor da caixa*/
+  }
+  .label-float input{ /*Cor da caixa*/
   width: 100%;
   padding: 5px 5px;
   display: inline-block;
@@ -148,34 +146,34 @@ h1{
   transition: all .3s ease-out;
   border-radius: 0;
   
-}
-
-.label-float{
+  }
+  
+  .label-float{
   position: relative;
-  padding-top: 13px;
+  padding-top: 20px;
   margin-top: 0%; /*aproximaçao das letras*/
   margin-bottom: 5%;
-}
-
-.label-float input:focus{
+  }
+  
+  .label-float input:focus{
   border-bottom: 2px solid #84A59D;
-}
-
-.label-float label{ /*estilo movimentaçao das letras  */
+  }
+  
+  .label-float label{ /*estilo movimentaçao das letras  */
   color: #84A59D;
   position: absolute;
-  top: 10;
+  top: 0;
   left: 0;
-  margin-top: 13px;
+  margin-top: 13x;
   transition: all .3s ease-out;
-}
-
-.label-float input:focus + label,
-.label-float input:valid + label{
+  }
+  
+  .label-float input:focus + label,
+  .label-float input:valid + label{
   font-size: 16px;
   margin-top: 0;
   color: #84A59D
-}
+  }
 
 button{
   background-color: #F28482;
@@ -188,25 +186,14 @@ button{
   border-radius: 0px;
         
   
-}
-
-button:hover{
-  background-color: #84A59D;
+  }
+  
+  button:hover{
+  background-color: #F28482;
   color: #fff;
-}
+  }
 
-.justify-center{
-  display: flex;
-  justify-content: center;
-}
-
-.fa-eye{
-  position: absolute;
-  top: 15px;
-  right: 10px;
-  cursor: pointer;
-  color: #84A59D;
-}
+  
   
 /* tudo dentro do card*/
   /* formulario de cadastro*/
